Fixed the Titlebar being too long for inexplicable reasons

--- a/User/Vozy/Documents/source files/everything else/selectors.css
+++ b/User/Vozy/Documents/source files/everything else/selectors.css
@@ -57,7 +57,8 @@
 .themed_b152d4 {
   background-color: var(--projectCabTitleBar);
   border: var(--borders);
-  margin: 0px 0px 10px 10px;
+  margin: 0 0 10px 10px;
+  width: calc(100% - 25px);
   padding: 0px;
 }
 
